# deepcode

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
deepcode/: __init__.py  __main__.py  cli.py
docs/design/: 2026-06-15-langchain-langgraph本地源码.md  开发计划.md  概要设计.md  详细设计.md
tests/: test_local_framework_sources.py  test_smoke.py
