[project]
name = "deepcode"
version = "0.0.1"
description = "A coding agent built on LangGraph, powered by DeepSeek."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.scripts]
deepcode = "deepcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["deepcode"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
