[project]
name = "deepcode"
version = "0.0.1"
description = "A coding agent built on LangGraph, powered by DeepSeek."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "langchain==1.3.9",
    "langgraph==1.2.5",
]

[project.scripts]
deepcode = "deepcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["deepcode"]

[tool.uv.sources]
langchain = { path = "vendor/langchain/libs/langchain_v1", editable = true }
langchain-core = { path = "vendor/langchain/libs/core", editable = true }
langgraph = { path = "vendor/langgraph/libs/langgraph", editable = true }
langgraph-checkpoint = { path = "vendor/langgraph/libs/checkpoint", editable = true }
langgraph-prebuilt = { path = "vendor/langgraph/libs/prebuilt", editable = true }
langgraph-sdk = { path = "vendor/langgraph/libs/sdk-py", editable = true }

[tool.ruff]
extend-exclude = ["vendor"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
